--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,6 @@
-<div class="text-lg bg-red-600">
+<div class="text-lg">
   <h1>sozan khalil hama salih</h1>
 </div>
+<hr>
+<app-servers></app-servers>
+<app-server></app-server>
