--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
-<div class="text-lg">
+<div class="my-2 text-lg">
   <h1>sozan khalil hama salih</h1>
 </div>
-<hr>
+<hr class="my-5">
 <app-servers></app-servers>
 <app-server></app-server>
