--- a/src/app/servers/servers.component.html
+++ b/src/app/servers/servers.component.html
@@ -1,1 +1,14 @@
-<p class="text-lg text-yellow-300">servers works!</p>
+
+<label for="input" class="block">server name</label>
+<input type="text" name="" id="" (input)="onUpdateServerName($event)" class="w-10/12 h-10 m-1 bg-slate-200">
+<p>{{serverName}}</p>
+<br>
+<input type="text" name="" id="" class="w-10/12 h-10 m-1 bg-slate-200" [(ngModel)]="serverName">
+<br>
+
+<br>
+
+<button class="p-3 m-4 text-white rounded-sm bg-slate-500" [disabled]="!allowNewServer" (click)="onCreationServer()">Add server</button>
+<!-- <p [innerText]="allowNewServer"></p> -->
+<p>{{serverCreationStatus}}</p>
+<br>
