--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,9 @@
-<div class="my-2 text-lg">
-  <h1>sozan khalil hama salih</h1>
-</div>
-<hr class="my-5">
+<h1>sozan khalil hama salih</h1>
+<hr>
+<h1 class="mt-3">servers component playground</h1>
+<br>
 <app-servers></app-servers>
+<hr class="border-4 border-amber-400">
+<h1 class="underline">server component playground</h1>
+
 <app-server></app-server>
