--- a/src/app/server/server.component.html
+++ b/src/app/server/server.component.html
@@ -1,11 +1,13 @@
-<!-- <div class="mt-4">{{'server'}} with ID {{serverId}} is {{getServerStatus()}}</div> -->
+<div  [ngStyle]="{backgroundColor: getColor()}" class="mt-4"  >{{'server'}} with ID {{serverId}} is {{getServerStatus()}}</div>
 
 <hr class="h-5 font-bold">
-<h1 class="font-semibold text-blue-500">assignment about data binding
+<h1 class="mx-5 font-semibold text-blue-500">assignment about data binding
     1- add input field two way data binding 
     2- add a button which may only be clicked if the user name is not an empty string and upon clicking the button the username should be reset to an empty string
 </h1>
 <div>
+    <label for="">user name</label>
+    <br>
 <input type="text" name="" id=""  class="w-10/12 h-10 m-1 bg-slate-200" [(ngModel)]="userName">
 <br>
 <button [disabled]="!userName" (click)="clearTheString()" class="p-3 m-4 text-white rounded-sm bg-slate-500">reset user name</button>
