--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
-<h1>sozan khalil hama salih</h1>
-<hr>
+<app-navbar></app-navbar>
+<hr class="mt-2">
 <h1 class="mt-3">servers component playground</h1>
 <br>
 <app-servers></app-servers>
@@ -7,3 +7,4 @@
 <h1 class="underline">server component playground</h1>
 
 <app-server></app-server>
+
