finish the basics and the last assignment

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,4 +7,7 @@
 <h1 class="underline">server component playground</h1>
 
 <app-server></app-server>
+<br>
+<hr class="border-4 border-amber-400">
+<app-assignment1></app-assignment1>
 
