creating basic project

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<app-navbar></app-navbar>
+<!-- <app-navbar></app-navbar>
 <hr class="mt-2">
 <h1 class="mt-3">servers component playground</h1>
 <br>
@@ -9,5 +9,10 @@
 <app-server></app-server>
 <br>
 <hr class="border-4 border-amber-400">
-<app-assignment1></app-assignment1>
+<app-assignment1></app-assignment1> -->
 
+<app-header></app-header>
+<div>
+<app-recipes></app-recipes>
+<app-shopping-list></app-shopping-list>
+</div>
