finish the project

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -8,11 +8,11 @@
             </ul>
             
         </div>
-        <div class=""> 
+        <div class="">
          
             <ul>
                 <li>
-                    <a href="" role="button" class="font-medium ">Manage <mat-icon class="pt-1">keyboard_arrow_down</mat-icon></a>
+                    <a href="" role="button" class="flex items-center justify-center font-medium">Manage <mat-icon class="">keyboard_arrow_down</mat-icon></a>
                     <ul class="hidden">
                         <li><a href="">Save data</a></li>
                         <li><a href="">Fetch data</a></li>
