--- a/src/app/recipes/recipe-detail/recipe-detail.component.html
+++ b/src/app/recipes/recipe-detail/recipe-detail.component.html
@@ -1,1 +1,30 @@
-<p>recipe-detail works!</p>
+<div class="mt-6 ml-6">
+<div>
+    <div>
+        <img src="" alt="">
+    </div>
+</div>
+<div>
+    <div>
+        <p class="text-3xl font-semibold">Recipe Name</p>
+    </div>
+</div>
+<div>
+    <div>
+        <div>
+            <button class="flex items-center justify-center p-2 text-white bg-blue-500 rounded-md">Manage Recipe <mat-icon>keyboard_arrow_down</mat-icon></button>
+            <ul class="items-center hidden pl-3">
+                <li>to shopping list</li>
+                <li>Edite recipe</li>
+                <li>Delete recipe</li>
+            </ul>
+        </div>
+    </div>
+</div>
+<div>
+    <div>Description</div>
+</div>
+<div>
+    <div>Ingridents</div>
+</div>
+</div>
