--- a/src/app/recipes/recipes.component.html
+++ b/src/app/recipes/recipes.component.html
@@ -2,7 +2,7 @@
     <div >
         <app-recipe-list class="bg-slate-400"></app-recipe-list>
     </div>
-    <div class="md:col-span-2">
+    <div class="mt-4 md:col-span-2">
         <app-recipe-detail></app-recipe-detail>
     </div>
 </div>
