--- a/src/app/recipes/recipe-list/recipe-list.component.html
+++ b/src/app/recipes/recipe-list/recipe-list.component.html
@@ -1,8 +1,18 @@
-<div>
-    <button>New Recipe</button>
+<div class="mt-4 ml-6">
+<div class="">
+    <button class="p-2 text-white bg-green-500 rounded-md">New Recipe</button>
 </div>
-
+<br>
 <div>
+    <div class="p-2 mb-4 border-2 hover:bg-gray-200" *ngFor="let recipe of recipes">
+    <a href="#"  class="flex items-center justify-between " >
+        <div>
+            <p class="text-2xl font-bold">{{recipe.name}}</p>
+            <p class="">{{recipe.description}}</p>
+        </div>
+        <span><img [src]="recipe.imagePath" alt="{{recipe.name}}" class=" max-h-14"></span>
+    </a>
+</div>
     <app-recipe-item></app-recipe-item>
 </div>
-
+</div>
