--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -10,3 +10,4 @@
         <li class="p-1 px-2 mx-2 text-white bg-black" [class.white-mode]="isDarkMode"><button (click)="toggleMode()" >{{isDarkMode?'light mode':'dark mode'}}</button></li>
     </ul> 
 </nav> 
+<h1>test</h1>
